--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -47,7 +47,7 @@
             android:inputType="textEmailAddress" />
 
         <TextView
-            android:id="@+id/editTextTextPersonName3"
+            android:id="@+id/signup_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30px"
@@ -59,7 +59,7 @@
             android:textSize="21sp" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/signup_pass"
             android:layout_width="match_parent"
             android:layout_height="90px"
             android:layout_marginHorizontal="30px"
