--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:inputType="textEmailAddress" />
 
         <TextView
-            android:id="@+id/signin_pass"
+            android:id="@+id/te"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30px"
@@ -62,7 +62,7 @@
             android:textSize="21sp" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/signin_pass"
             android:layout_width="match_parent"
             android:layout_height="90px"
             android:layout_marginHorizontal="80px"
