--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -38,7 +38,7 @@
             android:textSize="21sp" />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress2"
+            android:id="@+id/signup_email"
             android:layout_width="match_parent"
             android:layout_height="90px"
             android:layout_marginHorizontal="30px"
@@ -47,7 +47,7 @@
             android:inputType="textEmailAddress" />
 
         <TextView
-            android:id="@+id/signup_email"
+            android:id="@+id/texttttt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30px"
