--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -66,8 +66,97 @@
             android:layout_marginBottom="30px"
             android:background="@drawable/rounded_edittext"
             android:ems="10"
-
             android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30px"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:paddingLeft="30px"
+            android:text="Password:"
+            android:textColor="@color/black"
+            android:textSize="21sp" />
+
+        <EditText
+            android:id="@+id/signup_age"
+            android:layout_width="match_parent"
+            android:layout_height="90px"
+            android:layout_marginHorizontal="30px"
+            android:layout_marginBottom="30px"
+            android:background="@drawable/rounded_edittext"
+            android:ems="10"
+            android:inputType="text" />
+
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30px"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:paddingLeft="30px"
+            android:text="Password:"
+            android:textColor="@color/black"
+            android:textSize="21sp" />
+
+        <EditText
+            android:id="@+id/signup_name"
+            android:layout_width="match_parent"
+            android:layout_height="90px"
+            android:layout_marginHorizontal="30px"
+            android:layout_marginBottom="30px"
+            android:background="@drawable/rounded_edittext"
+            android:ems="10"
+            android:inputType="text" />
+
+        <TextView
+            android:id="@+id/city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30px"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:paddingLeft="30px"
+            android:text="Password:"
+            android:textColor="@color/black"
+            android:textSize="21sp" />
+
+        <EditText
+            android:id="@+id/signup_city"
+            android:layout_width="match_parent"
+            android:layout_height="90px"
+            android:layout_marginHorizontal="30px"
+            android:layout_marginBottom="30px"
+            android:background="@drawable/rounded_edittext"
+            android:ems="10"
+            android:inputType="text" />
+
+        <TextView
+            android:id="@+id/region"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30px"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:paddingLeft="30px"
+            android:text="Password:"
+            android:textColor="@color/black"
+            android:textSize="21sp" />
+
+        <EditText
+            android:id="@+id/signup_region"
+            android:layout_width="match_parent"
+            android:layout_height="90px"
+            android:layout_marginHorizontal="30px"
+            android:layout_marginBottom="30px"
+            android:background="@drawable/rounded_edittext"
+            android:ems="10"
+            android:inputType="text" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
