--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+        <color name="red">#FF0000</color>
+        <color name="dark_red">#800000</color>
+        <color name="green">#00FF00</color>
+        <color name="dark_green">#008000</color>
+    <color name="button_background_color">#FF0000</color>
 </resources>
