--- a/app/src/main/res/layout/activity_intrests.xml
+++ b/app/src/main/res/layout/activity_intrests.xml
@@ -45,6 +45,46 @@
                 android:text="Button" />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content" >
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_height="wrap_content"
+                android:layout_width="400px"
+
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_marginLeft="90px"
+                android:layout_width="400px"
+                android:layout_height="150px"
+                android:text="Button" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content" >
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_height="wrap_content"
+                android:layout_width="400px"
+
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_marginLeft="90px"
+                android:layout_width="400px"
+                android:layout_height="150px"
+                android:text="Button" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
