--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -16,8 +16,9 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="0.7"
-            android:src="@drawable/user"
+            android:src="@drawable/home"
             android:scaleType="centerInside"
+            android:onClick="onNavHomeClick"
             />
 
         <ImageButton
@@ -25,36 +26,42 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="0.7"
+            android:src="@drawable/search"
+            android:scaleType="centerInside"
+            android:onClick="onNavSearchClick"
+            />
+
+        <ImageButton
+            android:id="@+id/nav_addPost"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="0.7"
+            android:src="@drawable/more"
+            android:scaleType="centerInside"
+            android:onClick="onNavAddPostClick"
+            />
+
+        <ImageButton
+            android:id="@+id/nav_video"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="0.7"
             android:src="@drawable/video"
             android:scaleType="centerInside"
+            android:onClick="onNavVideoClick"
             />
+
 
         <ImageButton
             android:id="@+id/nav_profile"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="0.7"
-            android:src="@drawable/more"
+            android:src="@drawable/user"
             android:scaleType="centerInside"
+            android:onClick="onNavProfileClick"
             />
 
-        <ImageButton
-            android:id="@+id/nav_notifications"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="0.7"
-            android:src="@drawable/search"
-            android:scaleType="centerInside"
-            />
-
-        <ImageButton
-            android:id="@+id/nav_settings"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="0.7"
-            android:src="@drawable/home"
-            android:scaleType="centerInside"
-            />
 
     </LinearLayout>
 
