--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -1,4 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#8800FF" />
-    <corners android:radius="8dp" />
+    <solid android:color="#FFFFFF" /> <!-- Set the background color of the textbox -->
+    <corners android:radius="8dp" /> <!-- Set the radius of the corners to make it squared -->
+    <stroke
+        android:width="1dp"
+    android:color="#000000" /> <!-- Set the border color -->
 </shape>
