--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -9,27 +9,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="3dp" />
+        android:layout_marginBottom="6dp" />
 
-    <TextView
-        android:id="@+id/userNameTextView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/profileImageView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="289dp"
-        android:text="User Name"
-        android:textSize="24sp" />
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="66dp"
+        android:layout_marginBottom="509dp"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:id="@+id/userNameTextView"
+            android:layout_width="185dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/profileImageView"
+            android:layout_alignParentEnd="true"
+            android:gravity="center_horizontal"
+            android:textStyle="bold"
+            android:text="User Name"
+            android:textSize="30sp" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/profileImageView"
-        android:layout_width="109dp"
-        android:layout_height="110dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="299dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="290dp"
         android:background="@drawable/circle_shape"
         android:scaleType="centerCrop" />
 
@@ -39,21 +55,25 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/followingTextView"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="198dp"
+        android:layout_marginEnd="185dp"
         android:layout_marginBottom="-1dp"
-        android:text="Followers: 0"
+        android:text="Followers \n        0"
+        android:maxLines="2"
+        android:lines="2"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/followingTextView"
         android:layout_width="wrap_content"
-        android:layout_height="24dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="164dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="90dp"
-        android:text="Following: 0"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="95dp"
+        android:lines="2"
+        android:maxLines="2"
+        android:text="Following\n       0"
         android:textSize="18sp" />
 
     <TextView
@@ -62,11 +82,41 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/followingTextView"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="0dp"
-        android:text="Posts: 0"
+        android:maxLines="2"
+        android:lines="2"
+        android:text="Posts\n    0"
         android:textSize="18sp" />
 
+    <!--
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="180dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/signup"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="goToOrgOrActActivity"
+            android:text="Sign Up" />
+
+        <Button
+            android:id="@+id/signin"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="10dp"
+            android:onClick="goToHome"
+            android:text="Sign In" />
+
+    </LinearLayout>
+
+    -->
     <!-- Add more elements as needed -->
 
 </RelativeLayout>
