--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -19,76 +19,82 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="144dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginBottom="509dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="480dp"
         android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/userNameTextView"
             android:layout_width="185dp"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_below="@+id/profileImageView"
             android:layout_alignParentEnd="true"
             android:gravity="center_horizontal"
-            android:textStyle="bold"
             android:text="User Name"
-            android:textSize="30sp" />
+            android:textSize="25sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/profileImageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="290dp"
-        android:background="@drawable/circle_shape"
-        android:scaleType="centerCrop" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="129dp"
+       >
 
-    <TextView
-        android:id="@+id/followersTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/followingTextView"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="185dp"
-        android:layout_marginBottom="-1dp"
-        android:text="Followers \n        0"
-        android:maxLines="2"
-        android:lines="2"
-        android:textSize="18sp" />
+        <ImageView
+            android:id="@+id/profileImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="290dp"
+            android:background="@drawable/circle_shape"
+            android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/followingTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginLeft="164dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="95dp"
-        android:lines="2"
-        android:maxLines="2"
-        android:text="Following\n       0"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/followersTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/followingTextView"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="185dp"
+            android:layout_marginBottom="-1dp"
+            android:lines="2"
+            android:maxLines="2"
+            android:text="Followers \n        0"
+            android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/postsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/followingTextView"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="0dp"
-        android:maxLines="2"
-        android:lines="2"
-        android:text="Posts\n    0"
-        android:textSize="18sp" />
 
+        <TextView
+            android:id="@+id/followingTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="164dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="95dp"
+            android:lines="2"
+            android:maxLines="2"
+            android:text="Following\n       0"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/postsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/followingTextView"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="0dp"
+            android:lines="2"
+            android:maxLines="2"
+            android:text="Posts\n    0"
+            android:textSize="16sp" />
+    </RelativeLayout>
     <!--
     <LinearLayout
         android:layout_width="match_parent"
