--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -75,8 +75,34 @@
             android:hint="City"
             android:background="@drawable/edittext_background"
             android:padding="12dp"
-            android:layout_marginBottom="24dp"/>
+            android:layout_marginBottom="12dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:orientation="horizontal">
 
+        <CheckBox
+            android:id="@+id/simpleCheckBox"
+            android:layout_marginLeft="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+
+        <TextView
+            android:id="@+id/checkBoxText"
+            android:clickable="true"
+            android:textAlignment="textStart"
+            android:textColor="@color/AntiqueWhite"
+            android:onClick="OpenTermsAndGuidelines"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="5dp"
+            android:text="@string/checkBoxText"
+           />
+        </LinearLayout>
         <Button
             android:id="@+id/signup"
             android:layout_width="200dp"
