--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -44,15 +44,15 @@
 
         <ImageView
             android:id="@+id/profileImageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="290dp"
-            android:background="@drawable/circle_shape"
-            android:scaleType="centerCrop" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="290dp"
+        android:background="@drawable/circle_shape"
+        android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/followersTextView"
@@ -94,6 +94,23 @@
             android:maxLines="2"
             android:text="Posts\n    0"
             android:textSize="16sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center|bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="80dp"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:id="@+id/signup"
+            android:layout_width="200dp"
+            android:onClick="goToHomePageAndSignOut"
+            android:layout_height="wrap_content"
+            android:text="Sign Out" />
+
     </RelativeLayout>
     <!--
     <LinearLayout
