--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -105,9 +105,10 @@
         android:layout_centerHorizontal="true">
 
         <Button
-            android:id="@+id/signup"
+            android:id="@+id/button3"
             android:layout_width="200dp"
-            android:onClick="goToHomePageAndSignOut"
+            android:clickable="true"
+            android:onClick="signOut"
             android:layout_height="wrap_content"
             android:text="Sign Out" />
 
