--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -105,42 +105,14 @@
         android:layout_centerHorizontal="true">
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonHabibi"
             android:layout_width="200dp"
             android:clickable="true"
             android:onClick="signOut"
             android:layout_height="wrap_content"
-            android:text="Sign Out" />
+            android:text="Sign Outtt" />
 
     </RelativeLayout>
-    <!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="180dp"
-        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/signup"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="goToOrgOrActActivity"
-            android:text="Sign Up" />
-
-        <Button
-            android:id="@+id/signin"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginStart="10dp"
-            android:onClick="goToHome"
-            android:text="Sign In" />
-
-    </LinearLayout>
-
-    -->
-    <!-- Add more elements as needed -->
 
 </RelativeLayout>
